--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    <div class = "grid_container"></div>
+    <div id ="grid_container"></div>
 </body>
 </html>
