--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    <div id ="grid_container"></div>
+    <div class ="grid_container"></div>
 </body>
 </html>
