added grid sizing input and moved code around

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
     <div class ="grid_container"></div>
+    <button class ="grid_Sizing">Change Grid Size</button>
 </body>
 </html>
