organized format and added clear button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    <div class ="grid_container"></div>
-    <button class ="grid_Sizing">Change Grid Size</button>
+    <div class="left">
+        <button class ="grid_Sizing">Change Grid Size</button>
+        <button class = "clear_button">Clear</button>
+        <button>Black Ink</button>
+        <button>Rainbow Ink</button>
+    </div>
+    <div class ="right">
+        <h1>Etch-A-Sketch</h1>
+        <h3>By: Andrew Webster</h3>
+        <div class ="grid_container"></div>
+    </div>
+    
+    
 </body>
 </html>
