added the rest of button functionality

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="left">
         <button class ="grid_Sizing">Change Grid Size</button>
         <button class = "clear_button">Clear</button>
-        <button>Black Ink</button>
-        <button>Rainbow Ink</button>
+        <button class ="black">Black Ink</button>
+        <button class ="rainbow">Rainbow Ink</button>
     </div>
     <div class ="right">
         <h1>Etch-A-Sketch</h1>
